Styling, preparing to generate pdfs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,7 @@
+$headingsColor: #000000;
 @import 'bootstrap';
 @import "bootstrap-responsive";
 
-@import 'layout'
+@import 'layout';
+@import 'header';
+
