--- a/app/views/publications/show.html.erb
+++ b/app/views/publications/show.html.erb
@@ -1,5 +1,5 @@
 <div class="actions">
-  <%= link_to 'Volver', publications_path %> |
+  <%= link_to 'Volver', publications_path %>
   <%= link_to 'Editar', [:edit, publication] %>
 </div>
 <%= content_tag_for :article, publication do %>
