--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,4 +1,34 @@
 
-html, body {
+html, body, p {
   font-family: 'Kreon', serif;
 }
+
+.main {
+  border-top: 4px solid black;
+
+  .actions {
+    border-bottom: 2px solid black;
+  }
+}
+
+.sidebar {
+  border-top: 4px solid black;
+  padding: 10px 0;
+
+}
+
+
+div.actions {
+  width: 100%; overflow: hidden;
+
+  a {
+    display: inline-block;
+    border: 2px solid black;
+    padding: 3px 10px 2px 10px;
+    margin: 7px 5px 5px 0;
+    color: black;
+    font-weight: bold;
+    box-shadow: 2px -2px 0px #000;
+  }
+}
+
