--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <header id="page_header" role="banner">
-  <%= link_to 'Pubhub', root_path, class: 'appname' %>
+  <a href="/" class="appname">
+    <h3>Pubhub<small> #bookcamping</small></h3>
+  </a>
   <nav id="navigation" role="navigation">
   <ul>
     <%#= nav_tab :publications, publications_path, current: :publications %>
