--- a/app/views/publications/edit.html.erb
+++ b/app/views/publications/edit.html.erb
@@ -1,3 +1,6 @@
 <%= title "Editar '#{publication.title}'" %>
+<div class="actions">
+  <%= link_to 'Volver', publication, class: 'back' %>
+</div>
 
 <%= render 'form' %>
