--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -8,8 +8,8 @@
   <% publications.each do |pub| %>
     <tr>
       <td><%= link_to pub.title, pub %></td>
-      <td><%= pub.author %></div>
-      <td><%= pub.publisher %></div>
+      <td><%= pub.author %></td>
+      <td><%= pub.publisher %></td>
     </tr>
   <% end %>
 </table>
