--- a/app/views/publications/new.html.erb
+++ b/app/views/publications/new.html.erb
@@ -1,3 +1,6 @@
 <%= title 'Añadir publicación' %>
+<div class="actions">
+  <%= link_to 'Volver', publications_path, class: 'back' %>
+</div>
 
 <%= render 'form' %>
