Preparando el deployment

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,4 +1,4 @@
 <p>
-<strong>Pubhub</strong> es una herramienta para generar publicaciones en formato 
-.pdf o .epub a partir de texto enriquecido.
+<strong>Ficciones</strong> es una herramienta de <a href="http://bookcamping.cc">Bookcamping</a>
+para crear y publicar historias de manera colaborativa.
 </p>
