--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pubhub</title>
+    <title><%= yield :title %> :: <%= current_group.name %></title>
     <link href='http://fonts.googleapis.com/css?family=Kreon:300,700|Cousine' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
@@ -9,6 +9,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <%= render 'layouts/flashes' %>
     <div class="container">
       <div class="row">
         <div class="main span8">
