--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,4 +1,4 @@
 <p>
 <strong>Ficciones</strong> es una herramienta de <a href="http://bookcamping.cc">Bookcamping</a>
-para crear y publicar historias de manera colaborativa.
+para crear y publicar ficciones (o no) de manera colaborativa.
 </p>
