--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= render 'layouts/flashes' %>
     <div class="container">
       <div class="banner row"><div class="span12">
-          <%= placeholder_image_tag({text: "Mundo tornado (1170x200)", width: 1170, height: 200}, {class: "responsive"}) %>
+          <img alt="Mundo tornado" class="responsive" src="//cambelt.co/1170x200/Mundo+tornado+(1170x200)?font=Questrial&amp;font_size=48&amp;color=#cccccc,#333333">
       </div></div>
       <div class="row">
         <div class="main span8">
