--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,7 @@
     <%= render 'layouts/header' %>
     <%= render 'layouts/flashes' %>
     <div class="container">
-      <div class="banner row"><div class="span12">
-          <img alt="Mundo tornado" class="responsive" src="//cambelt.co/1170x200/Mundo+tornado+(1170x200)?font=Questrial&amp;font_size=48&amp;color=#cccccc,#333333">
-      </div></div>
+      <%= render 'banner' %>
       <div class="row">
         <div class="main span8">
           <%= yield %>
