--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -31,6 +31,11 @@ div.actions {
     font-weight: bold;
     box-shadow: 2px -2px 0px #000;
   }
+
+}
+.footer { 
+  padding-top: 2px; margin-top: 30px;
+  p { font-size: 13px; }
 }
 
 .banner { margin-bottom: 10px; }
