--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,16 @@
         </div>
         <div class="sidebar span4">
           <%= render 'sidebar' %>
+          <div class="footer">
+            <p>
+            <strong>Ficciones</strong> es una herramienta de <a href="http://bookcamping.cc">Bookcamping</a>
+            para crear y publicar ficciones (o no) de manera colaborativa.
+            </p>
+          </div>
+
         </div>
+      </div>
+      <div class="row">
       </div>
     </div>
   </body>
