--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,14 @@
 <div class="container">
-  <header id="page_header" role="banner">
-  <a href="/" class="appname">
-    <h3><%= current_group.name %><small> #bookcamping</small></h3>
-  </a>
-  <nav id="navigation" role="navigation">
-  <ul>
-    <%#= nav_tab :publications, publications_path, current: :publications %>
-  </ul>
-  </nav>
-  <% if current_user %>
-    <nav id="session">
-    <p>Hola <%= link_to current_user.name, [:edit, current_user] %> | <%= link_to 'Salir', logout_path %></p>
-  </nav>
-<% end %>
-</header>
+  <div id="page-header" class="row">
+    <div class="span6 offset3">
+      <% if current_user %>
+        <div id="session">
+          <p>Hola <%= link_to current_user.name, [:edit, current_user] %> | <%= link_to 'Salir', logout_path %></p>
+        </div>
+      <% end %>
+      <a href="/" class="appname">
+        <h3><%= current_group.name %><small> #bookcamping</small></h3>
+      </a>
+    </div>
+  </div>
 </div>
