--- a/app/views/seeds/_form.html.erb
+++ b/app/views/seeds/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for seed do |form| %>
-  <%= form.input :body, as: :text %>
-  <%= form.submit class: 'btn' %>
+  <%= form.input :body, as: :text, label: false %>
+  <%= form.submit %>
 <% end %>
