--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,22 +1,37 @@
+$black: #333;
 
 html, body, p {
   font-family: 'Kreon', serif;
 }
 
 .main {
-  border-top: 4px solid black;
+  border-top: 4px solid $black;
+  min-height: 500px;
 
   .actions {
-    border-bottom: 2px solid black;
+    -no-border-bottom: 2px solid $black;
     margin-bottom: 20px;
+  }
+  ul {
+    margin-left: 0;
+    list-style: none inside none;
+    li:before { content: '- '; }
   }
 }
 
-.sidebar {
-  border-top: 4px solid black;
+.sidebar .sidecontent {
+  border-top: 4px solid $black;
   padding: 10px 0;
 
+  ul  {
+    margin-left: 0;
+    list-style: none inside none; 
+  }
+  p:first-child { margin-top: 0;}
+
+  div.actions { font-size: 80%; margin-bottom: 20px; }
 }
+
 
 
 div.actions {
@@ -24,18 +39,31 @@ div.actions {
 
   a {
     display: inline-block;
-    border: 2px solid black;
-    padding: 3px 10px 2px 10px;
+    border: 2px solid $black;
+    padding: 1px 5px 0px 5px;
     margin: 7px 5px 5px 0;
-    color: black;
+    color: white; background-color: $black;
     font-weight: bold;
-    box-shadow: 2px -2px 0px #000;
+    -no-box-shadow: 2px -2px 0px $black;
+    border-radius: 1px;
   }
-
 }
 .footer { 
+  display: none;
+  text-align: center;
   padding-top: 2px; margin-top: 30px;
   p { font-size: 13px; }
 }
 
+#page-header {
+  #session {
+    float: right;
+    padding-top: 5px;
+    height: 1.2em;
+  }
+  h3 { margin: 0; }
+}
+
 .banner { margin-bottom: 10px; }
+
+#flashes .alert { margin-top: -5px; }
