Ficciones nginx. Versiones de escenas

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -2,5 +2,5 @@
   <%= form.input :name %>
   <%= form.input :subdomain %>
   <%= form.input :description, as: :text %>
-  <%= form.submit class: 'btn' %>
+  <%= form.submit %>
 <% end %>
