--- a/app/views/contents/_form.html.erb
+++ b/app/views/contents/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for page do |form| %>
+<%= simple_form_for content do |form| %>
   <%= form.input :title %>
   <%= form.input :content %>
   <%= form.submit %>
