--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,5 +1,5 @@
+<%= title "Añadir #{model.model_name.human}" %>
 <div class="actions">
-  <%= title "Editar #{page.title}" %>
 </div>
 
 <%= render 'form' %>
