--- a/app/views/scenes/_scene.html.erb
+++ b/app/views/scenes/_scene.html.erb
@@ -1,4 +1,5 @@
 <%= div_for scene, class: 'item' do %>
+  <a name="s2" />
   <div class="info">
     <h4>Escena <%= scene.position %></h4>
     <%= link_to icon(:trash), [chapter, scene], method: :delete,
