--- a/app/assets/stylesheets/models.css.scss
+++ b/app/assets/stylesheets/models.css.scss
@@ -28,3 +28,8 @@ div.scene:hover {
   padding-top: 0;
   div.info {display: block}
 }
+
+div.mentions {
+  margin-top: 30px;
+  border-top: 1px solid #efefef;
+}
