--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -48,6 +48,9 @@ div.actions {
     border-radius: 1px;
   }
 }
+
+div.summary { font-style: italic; }
+
 .footer { 
   display: none;
   text-align: center;
